@@ -46,6 +46,7 @@ import org.opensearch.gradle.ReaperService;
 import org.opensearch.gradle.Version;
 import org.opensearch.gradle.VersionProperties;
 import org.opensearch.gradle.info.BuildParams;
+import org.opensearch.gradle.info.FipsBuildParams;
 import org.gradle.api.Action;
 import org.gradle.api.Named;
 import org.gradle.api.NamedDomainObjectContainer;
@@ -116,13 +117,26 @@ public class OpenSearchNode implements TestClusterConfiguration {
     private static final TimeUnit NODE_UP_TIMEOUT_UNIT = TimeUnit.MINUTES;
     private static final int ADDITIONAL_CONFIG_TIMEOUT = 15;
     private static final TimeUnit ADDITIONAL_CONFIG_TIMEOUT_UNIT = TimeUnit.SECONDS;
-    private static final List<String> OVERRIDABLE_SETTINGS = Arrays.asList("path.repo", "discovery.seed_providers", "discovery.seed_hosts");
+    private static final List<String> OVERRIDABLE_SETTINGS = Arrays.asList(
+        "path.repo",
+        "discovery.seed_providers",
+        "discovery.seed_hosts",
+        "indices.breaker.total.use_real_memory",
+        "cluster.initial_cluster_manager_nodes",
+        "cluster.initial_master_nodes"
+    );
 
     private static final int TAIL_LOG_MESSAGES_COUNT = 40;
     private static final List<String> MESSAGES_WE_DONT_CARE_ABOUT = Arrays.asList(
         "Option UseConcMarkSweepGC was deprecated",
         "is a pre-release version of OpenSearch",
-        "max virtual memory areas vm.max_map_count"
+        "max virtual memory areas vm.max_map_count",
+        "WARNING: A restricted method in java.lang.foreign.Linker has been called",
+        "WARNING: java.lang.foreign.Linker::downcallHandle has been called by the unnamed module",
+        "WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for this module",
+        "System::setSecurityManager",
+        "Please consider reporting this to the maintainers of org.opensearch.bootstrap.OpenSearch",
+        "net.bytebuddy.dynamic.loading.ClassInjector"
     );
     private static final String HOSTNAME_OVERRIDE = "LinuxDarwinHostname";
     private static final String COMPUTERNAME_OVERRIDE = "WindowsComputername";
@@ -541,9 +555,13 @@ public class OpenSearchNode implements TestClusterConfiguration {
             logToProcessStdout("installed plugins");
         }
 
+        if (FipsBuildParams.isInFipsApprovedOnlyMode() && keystorePassword.isEmpty()) {
+            throw new TestClustersException("Can not start " + this + " in FIPS JVM, missing keystore password");
+        }
+
         logToProcessStdout("Creating opensearch keystore with password set to [" + keystorePassword + "]");
         if (keystorePassword.length() > 0) {
-            runOpenSearchBinScriptWithInput(keystorePassword + "\n" + keystorePassword, "opensearch-keystore", "create", "-p");
+            runOpenSearchBinScriptWithInput(keystorePassword + "\n" + keystorePassword + "\n", "opensearch-keystore", "create", "-p");
         } else {
             runOpenSearchBinScript("opensearch-keystore", "-v", "create");
         }
@@ -551,7 +569,7 @@ public class OpenSearchNode implements TestClusterConfiguration {
         if (keystoreSettings.isEmpty() == false || keystoreFiles.isEmpty() == false) {
             logToProcessStdout("Adding " + keystoreSettings.size() + " keystore settings and " + keystoreFiles.size() + " keystore files");
 
-            keystoreSettings.forEach((key, value) -> runKeystoreCommandWithPassword(keystorePassword, value.toString(), "add", "-x", key));
+            keystoreSettings.forEach((key, value) -> runKeystoreCommandWithPassword(keystorePassword, value.toString(), "add", key));
 
             for (Map.Entry<String, File> entry : keystoreFiles.entrySet()) {
                 File file = entry.getValue();
@@ -733,7 +751,12 @@ public class OpenSearchNode implements TestClusterConfiguration {
     }
 
     private void runKeystoreCommandWithPassword(String keystorePassword, String input, CharSequence... args) {
-        final String actualInput = keystorePassword.length() > 0 ? keystorePassword + "\n" + input : input;
+        final String actualInput;
+        if (keystorePassword.length() > 0) {
+            actualInput = keystorePassword + "\n" + input + "\n" + input;
+        } else {
+            actualInput = input + "\n" + input;
+        }
         runOpenSearchBinScriptWithInput(actualInput, "opensearch-keystore", args);
     }
 
@@ -984,7 +1007,7 @@ public class OpenSearchNode implements TestClusterConfiguration {
     }
 
     private void logFileContents(String description, Path from) {
-        final Map<String, Integer> errorsAndWarnings = new LinkedHashMap<>();
+        final Map<LogMessage, Integer> errorsAndWarnings = new LinkedHashMap<>();
         LinkedList<String> ring = new LinkedList<>();
         try (LineNumberReader reader = new LineNumberReader(Files.newBufferedReader(from))) {
             for (String line = reader.readLine(); line != null; line = reader.readLine()) {
@@ -996,10 +1019,12 @@ public class OpenSearchNode implements TestClusterConfiguration {
                         lineToAdd = line;
                         // check to see if the previous message (possibly combined from multiple lines) was an error or
                         // warning as we want to show all of them
-                        String previousMessage = normalizeLogLine(ring.getLast());
-                        if (MESSAGES_WE_DONT_CARE_ABOUT.stream().noneMatch(previousMessage::contains)
-                            && (previousMessage.contains("ERROR") || previousMessage.contains("WARN"))) {
-                            errorsAndWarnings.put(previousMessage, errorsAndWarnings.getOrDefault(previousMessage, 0) + 1);
+                        String previousMessage = ring.getLast();
+                        String normalizedMessage = normalizeLogLine(previousMessage);
+                        if (MESSAGES_WE_DONT_CARE_ABOUT.stream().noneMatch(normalizedMessage::contains)
+                            && (normalizedMessage.contains("ERROR") || normalizedMessage.contains("WARN"))) {
+                            LogMessage logMsg = new LogMessage(previousMessage, normalizedMessage);
+                            errorsAndWarnings.put(logMsg, errorsAndWarnings.getOrDefault(logMsg, 0) + 1);
                         }
                     } else {
                         // We combine multi line log messages to make sure we never break exceptions apart
@@ -1020,8 +1045,8 @@ public class OpenSearchNode implements TestClusterConfiguration {
         }
         if (errorsAndWarnings.isEmpty() == false) {
             LOGGER.lifecycle("\n»    ↓ errors and warnings from " + from + " ↓");
-            errorsAndWarnings.forEach((message, count) -> {
-                LOGGER.lifecycle("» " + message.replace("\n", "\n»  "));
+            errorsAndWarnings.forEach((logMsg, count) -> {
+                LOGGER.lifecycle("» " + logMsg.fullMessage().replace("\n", "\n»  "));
                 if (count > 1) {
                     LOGGER.lifecycle("»   ↑ repeated " + count + " times ↑");
                 }
@@ -1032,11 +1057,24 @@ public class OpenSearchNode implements TestClusterConfiguration {
 
         if (ring.isEmpty() == false) {
             LOGGER.lifecycle("»   ↓ last " + TAIL_LOG_MESSAGES_COUNT + " non error or warning messages from " + from + " ↓");
-            ring.forEach(message -> {
-                if (errorsAndWarnings.containsKey(normalizeLogLine(message)) == false) {
-                    LOGGER.lifecycle("» " + message.replace("\n", "\n»  "));
-                }
-            });
+            ring.stream()
+                .filter(message -> !message.contains("ERROR") && !message.contains("WARN"))
+                .forEach(message -> LOGGER.lifecycle("» " + message.replace("\n", "\n»  ")));
+        }
+    }
+
+    private record LogMessage(String fullMessage, String normalizedMessage) {
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+            LogMessage that = (LogMessage) o;
+            return normalizedMessage.equals(that.normalizedMessage);
+        }
+
+        @Override
+        public int hashCode() {
+            return normalizedMessage.hashCode();
         }
     }
 
@@ -1182,10 +1220,6 @@ public class OpenSearchNode implements TestClusterConfiguration {
         baseConfig.put("indices.breaker.total.use_real_memory", "false");
         // Don't wait for state, just start up quickly. This will also allow new and old nodes in the BWC case to become the master
         baseConfig.put("discovery.initial_state_timeout", "0s");
-
-        // TODO: Remove these once https://github.com/elastic/elasticsearch/issues/46091 is fixed
-        baseConfig.put("logger.org.opensearch.action.support.master", "DEBUG");
-        baseConfig.put("logger.org.opensearch.cluster.coordination", "DEBUG");
 
         HashSet<String> overriden = new HashSet<>(baseConfig.keySet());
         overriden.retainAll(settings.keySet());
