@@ -13,6 +13,8 @@ import com.sun.management.ThreadMXBean;
 import org.apache.lucene.util.Constants;
 import org.opensearch.ExceptionsHelper;
 import org.opensearch.action.admin.cluster.node.tasks.cancel.CancelTasksRequest;
+import org.opensearch.action.admin.cluster.node.tasks.get.GetTaskRequest;
+import org.opensearch.action.admin.cluster.node.tasks.get.GetTaskResponse;
 import org.opensearch.action.admin.cluster.node.tasks.list.ListTasksRequest;
 import org.opensearch.action.admin.cluster.node.tasks.list.ListTasksResponse;
 import org.opensearch.action.support.ActionTestUtils;
@@ -177,9 +179,9 @@ public class ResourceAwareTasksTests extends TaskManagerTestCase {
                 @SuppressForbidden(reason = "ThreadMXBean#getThreadAllocatedBytes")
                 protected void doRun() {
                     taskTestContext.memoryConsumptionWhenExecutionStarts = threadMXBean.getThreadAllocatedBytes(
-                        Thread.currentThread().getId()
+                        Thread.currentThread().threadId()
                     );
-                    threadId.set(Thread.currentThread().getId());
+                    threadId.set(Thread.currentThread().threadId());
 
                     // operationStartValidator will be called just before the task execution.
                     if (taskTestContext.operationStartValidator != null) {
@@ -408,7 +410,9 @@ public class ResourceAwareTasksTests extends TaskManagerTestCase {
         // Waiting for whole request to complete and return successfully till client
         taskTestContext.requestCompleteLatch.await();
 
-        assertEquals(0, resourceTasks.size());
+        // The task may not be removed from resourceAwareTasks immediately after the request completes
+        // because stopTracking is called asynchronously via the task's resource tracking completion listener.
+        assertBusy(() -> assertEquals(0, resourceTasks.size()));
         assertNull(throwableReference.get());
         assertNotNull(responseReference.get());
         assertEquals(1, responseReference.get().failureCount());
@@ -563,8 +567,57 @@ public class ResourceAwareTasksTests extends TaskManagerTestCase {
 
             assertNotNull(taskInfo.getResourceStats());
             assertNotNull(taskInfo.getResourceStats().getResourceUsageInfo());
-            assertTrue(taskInfo.getResourceStats().getResourceUsageInfo().get("total") instanceof TaskResourceUsage);
-            TaskResourceUsage taskResourceUsage = (TaskResourceUsage) taskInfo.getResourceStats().getResourceUsageInfo().get("total");
+            assertNotNull(taskInfo.getResourceStats().getResourceUsageInfo().get("total"));
+            TaskResourceUsage taskResourceUsage = taskInfo.getResourceStats().getResourceUsageInfo().get("total");
+            assertCPUTime(taskResourceUsage.getCpuTimeInNanos());
+            assertTrue(taskResourceUsage.getMemoryInBytes() > 0);
+        };
+
+        taskTestContext.operationFinishedValidator = (task, threadId) -> { assertEquals(0, resourceTasks.size()); };
+
+        startResourceAwareNodesAction(testNodes[0], false, taskTestContext, new ActionListener<NodesResponse>() {
+            @Override
+            public void onResponse(NodesResponse listTasksResponse) {
+                responseReference.set(listTasksResponse);
+                taskTestContext.requestCompleteLatch.countDown();
+            }
+
+            @Override
+            public void onFailure(Exception e) {
+                throwableReference.set(e);
+                taskTestContext.requestCompleteLatch.countDown();
+            }
+        });
+
+        // Waiting for whole request to complete and return successfully till client
+        taskTestContext.requestCompleteLatch.await();
+
+        assertTasksRequestFinishedSuccessfully(responseReference.get(), throwableReference.get());
+    }
+
+    public void testOnDemandRefreshWhileGetTask() throws InterruptedException {
+        setup(true, false);
+
+        final AtomicReference<Throwable> throwableReference = new AtomicReference<>();
+        final AtomicReference<NodesResponse> responseReference = new AtomicReference<>();
+
+        TaskTestContext taskTestContext = new TaskTestContext();
+
+        Map<Long, Task> resourceTasks = testNodes[0].taskResourceTrackingService.getResourceAwareTasks();
+
+        taskTestContext.operationStartValidator = (task, threadId) -> {
+            assertFalse(resourceTasks.isEmpty());
+            GetTaskResponse getTaskResponse = ActionTestUtils.executeBlocking(
+                testNodes[0].transportGetTaskAction,
+                new GetTaskRequest().setTaskId(new TaskId(testNodes[0].getNodeId(), new ArrayList<>(resourceTasks.values()).get(0).getId()))
+            );
+
+            TaskInfo taskInfo = getTaskResponse.getTask().getTask();
+
+            assertNotNull(taskInfo.getResourceStats());
+            assertNotNull(taskInfo.getResourceStats().getResourceUsageInfo());
+            assertNotNull(taskInfo.getResourceStats().getResourceUsageInfo().get("total"));
+            TaskResourceUsage taskResourceUsage = taskInfo.getResourceStats().getResourceUsageInfo().get("total");
             assertCPUTime(taskResourceUsage.getCpuTimeInNanos());
             assertTrue(taskResourceUsage.getMemoryInBytes() > 0);
         };
